Переформатирование ТЗ, курсовой и swagger документации
